2023-11-30  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test31-signal-process): Extend.

2023-11-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-timeout-handler): Be more verbose.

2023-10-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test05-expand-file-name-tilde): New test.

2023-09-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test17-insert-directory): Improve check.
	(tramp--test-check-files): Don't err out when "printenv" doesn't
	exist on remote side.
	(tramp-test47-read-password): Remove :unstable tag.
	(tramp-test47-read-otp-password): Rename.

2023-09-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test46-read-password): Use `copy-tree' but
	`copy-sequence'.
	(tramp-test46-read-otp-password): New test.

2023-09-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-netbsd-p): New defun.
	(tramp--test-check-files): Use it.

2023-08-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-archive-tests.el (tramp-archive-test44-user-group-ids):
	Extend test.

	* tramp-tests.el (tramp-test47-read-password): Tag it :unstable.

2023-08-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test41-special-characters): Skip for macOS.

2023-08-09  Mattias Engdegård  <mattiase@acm.org>

	* tramp-tests.el (tramp-test30-make-process): Duck make-process
	bytecomp warning.

2023-08-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test10-write-region): Extend test.
	(tramp--test-openbsd-p): New defun.
	(tramp-test41-special-characters, tramp-test42-utf8): Use it.
	(Bug#64935)
	(tramp-test42-utf8): Skip for macOS.

2023-07-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-instrument-test-case): Don't bind
	`trace-buffer'.

2023-07-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-archive-tests.el (tramp-archive-test49-without-remote-files):